# NyarchUpdater

./: .gitignore  README.md  install.sh  meson.build  moe.nyarchlinux.updater.json  package-lock.json  package.json  run.sh
.github/workflows/: flatpak-build.yml
@types/: gi.d.ts
data/: meson.build  moe.nyarchlinux.updater.desktop.in  moe.nyarchlinux.updater.gschema.xml  moe.nyarchlinux.updater.metainfo.xml.in  public.asc
data/icons/: meson.build
po/: POTFILES  meson.build  nyarchupdater.pot  zh_CN.po
src/: carousel_page.ui  faq.js  faq.ui  index.js  main.js  meson.build  moe.nyarchlinux.updater.data.gresource.xml  moe.nyarchlinux.updater.src.gresource.xml  nyarchupdater.data.gresource.xml  pages.js  presentation.js  presentation.ui  utils.js  window.js  window.ui
types/: gi.d.ts
